Font fixes (line height discrepancy on Firefox).

--- a/src/App.css
+++ b/src/App.css
@@ -320,7 +320,7 @@
     margin: 0;
     padding: 0;
 
-    top: -15px;
+   /* top: -15px;*/
 }
 
 .mugs-image {
@@ -439,6 +439,10 @@
 .text-box-overview {
     position: sticky;
     top: -15px;
+    line-height: 50px;
+    background-color: red;
+    padding-top: -15;
+    font-family: Helvetica;
 }
 
 .text-animate-in {
